<resources>
    <string name="app_name">Artifact</string>
    <string name="app_capture">Capture Evidence</string>
    <string name="app_review">Review Evidence</string>
    <string name="title_activity_capture_evidence">Capture Evidence</string>
    <string name="get_video">Record Video</string>
    <string name="get_audio">Record Audio</string>
    <string name="get_picture">Snap Picture</string>
    <string name="Artifact_logo_text" translatable="false">Artifact App</string>
    <string name="login_btn">Login</string>
    <string name="password_btn">Password</string>
    <string name="email_btn">Your email address</string>
    <string name="add_student_btn">Add Students</string>
    <string name="Add_students_header">Add Students</string>
    <string name="add_students_textbox">Student name</string>
    <string name="add_students_btn">Submit Student Name</string>
    <string name="ddl_student">None</string>
    <string name="edit_student_btn">Edit Student</string>
    <string name="editStudents">EDIT STUDENT NAME</string>
    <string name="select_student">Select Student:</string>
    <string name="new_name">Enter new name:</string>
    <string name="edited_name">Edited Name</string>
    <string name="capture_evidence">Capture Evidence</string>
    <string name="review_evidence">Review Evidence</string>
    <string name="add_students">Add Students</string>
    <string name="edit_student">Edit Students</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
</resources>
