<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never" />
    <item android:id="@+id/capture_evidence"
        android:title="@string/capture_evidence"
        app:showAsAction="never" />
    <item android:id="@+id/review_evidence"
        android:title="@string/review_evidence"
        app:showAsAction="never" />
    <item android:id="@+id/add_students"
        android:title="@string/add_students"
        app:showAsAction="never" />
    <item android:id="@+id/edit_student"
        android:title="@string/edit_student"
        app:showAsAction="never" />
    <item android:id="@+id/log_out"
    android:title="@string/log_out"
        app:showAsAction="never" />
</menu>